# albert

./: .config  .envrc  .gitignore  Makefile  README.md
br-ext-tree/: Config.in  README.md  external.desc  external.mk
br-ext-tree/board/: wpa_supplicant_template.conf
br-ext-tree/configs/: albert_defconfig  albert_dev_defconfig  dev_defconfig.partial  joomby_defconfig
br-ext-tree/package/albert-peripherals/: a.out  main.c
br-ext-tree/package/albert-temperature-sensor/: CMakeLists.txt  Config.in  albert-temperature-sensor.mk  io.github.eltonlaw.albert.conf
br-ext-tree/package/albert-temperature-sensor/src/: CMakeLists.txt  main.cpp
br-ext-tree/package/albert-ui/: CMakeLists.txt  Config.in  Makefile  albert-ui.mk  qml.qrc
br-ext-tree/package/albert-ui/qml/: Navbar.qml  NavbarButton.qml  Style.qml  TemperatureChart.qml  main.qml
br-ext-tree/package/albert-ui/qml/themes/: Default.qml
br-ext-tree/package/albert-ui/src/: main.cpp  temp_sensor.cpp  temp_sensor.h
br-ext-tree/package/albert-ui/src/lib/: lib.h  queue.h  random.cpp
br-ext-tree/package/albert-ui/test/: test.cpp  test_queue.h
br-ext-tree/package/joomby/: CMakeLists.txt  Config.in  Makefile  joomby.mk
br-ext-tree/package/joomby/qml/: TemperatureChart.qml
br-ext-tree/package/joomby/src/: main.cpp  temp_sensor.cpp  temp_sensor.h
br-ext-tree/package/joomby/src/lib/: queue.h
br-ext-tree/package/temperature-sensor/: CMakeLists.txt  Config.in  README.md  org.joomby.TemperatureSensor.conf  temperature-sensor.mk  temperature-sensor.service
br-ext-tree/package/temperature-sensor/src/: CMakeLists.txt  error.cpp  main.cpp  server.cpp
br-ext-tree/package/temperature-sensor/src/org/joomby/: TemperatureSensor.errors.yaml  TemperatureSensor.interface.yaml
br-ext-tree/package/temperature-sensor/src/org/joomby/TemperatureSensor/: client.hpp  error.hpp  server.hpp
br-ext-tree/patches/rpi-firmware/: 0001-PATCH-package-rpi-firmware-enable-i2c-bus.patch
patches/: 0001-package-qt5webengine-needs-host-freetype-host-libjpeg.patch  0002-package-sdbus-cpp-init.patch
pcb_pi_shield/: components.kicad_sym
pi-main-controller/: .config  CMakeLists.txt  Makefile  main.qml  pi-main-controller.mk  qml.qrc
pi-main-controller/board/: post-build.sh
pi-main-controller/qml/: NavbarButton.qml  TemperatureChart.qml  main.qml
pi-main-controller/src/: backend.cpp  backend.h  main.cpp  queue.h  temp_sensor.cpp  temp_sensor.h
pi-main-controller/src/lib/: lib.h  queue.h  random.cpp  random.h
pi-main-controller/test/: Makefile  test  test.cpp  test_queue.h  test_random.h  test_utils.h
scripts/: buildroot_utils.py  run.py
src/: .config  CMakeLists.txt  Config.in  Home.qml  Makefile  Navbar.qml  backend.cpp  backend.h  main.c  main.cpp  main.qml  pi-main-controller.mk  qml.qrc  temp_sensor.cpp  test.cpp  test_queue.h  test_utils.h
